# ESP-myhome-EchoEar

./: .gitignore  CMakeLists.txt  ESP32-S3-TTS-4_elevenlabs_psram.ino  README-FLASH.md  README.md  config.cpp  config.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Kira/: server.py
Kira/config/: tools_config.json
components/espressif__esp-sr/: CMakeLists.txt
components/minimp3/include/: minimp3.h
data/: bg_mouth.raw  mouth_1_small.raw  mouth_2_medium.raw  mouth_3_smile.raw  mouth_4_small2.raw
main/: CMakeLists.txt  audio_player.c  audio_player.h  board.h  config-example.h  config.h  disp_init_data.h  display.c  display.h  face_anim.c  face_anim.h  ha_client.c  ha_client.h  http_api.c  http_api.h  idf_component.yml  led_anim.c  led_anim.h  main.c  secret-example.h  secrets.h  touch_wakeup.c  touch_wakeup.h  voice_cmd.c  voice_cmd.h  wake_local.c  wake_local.h  wake_word_local.c  wake_word_local.h
scripts/: convert_kira_color.py  convert_kira_sprites.py
